# torch_minrnn

./: LICENSE  README.md  pyproject.toml
src/minrnn/: __init__.py  minrnn_cell.py  runtime_test.py
